Changelog
=========


2.12.3 (unreleased)
-------------------

- Nothing changed yet.


2.12.2 (2019-06-19)
-------------------

- Make sure to always use a portal_migration tool wrapped in a RequestContainer.
  (Fixes "AttributeError: REQUEST" on a Plone 5.1.x upgrade) [lgraf]


2.12.1 (2019-06-18)
-------------------

- Choose actual port used by ZServer layer to run CommandAndInstance tests against. [lgraf]
- Disable Diazo on upgrades-plain for Plone 5.1.5 support. [jone]


2.12.0 (2018-07-26)
-------------------

- Allow marking upgrades as deferred so they won't be proposed by default. [deiferni]


2.11.1 (2018-04-05)
-------------------

- Fix connection problem when zope.conf contains ip-address. [jone]
- Make sure remove_broken_browserlayer() helper doesn't fail if the browser
  layer registration to be removed doesn't exist (any more). [lgraf]


2.11.0 (2018-01-31)
-------------------

- Provide upgrade step handler interfaces and handler class in wrapper. [jone]
- Do not propose executed upgrades newer than current db version. [jone]


2.10.0 (2018-01-08)
-------------------

- Support installing proposed upgrades of specific Generic Setup profiles.
  Use ``bin/upgrade install --proposed the.package:default``. [jone]


2.9.0 (2017-12-14)
------------------

- Optimize memory footprint after every upgrade step. [jone]
- Reduce memory footprint in SavepointIterator by garbage-collecting connection cache. [jone]
- Set the default savepoint threshold to 1000; make it configurable. [jone]
- Enable savepoint iterator by default. Affects ``self.objects``. [jone]
- Use a SavepointIterator in the WorkflowSecurityUpdater in order not to exceed
  memory. [mbaechtold]


2.8.1 (2017-10-13)
------------------

- Also catch AttributeErrors when accessing objects of broken brains. [buchi]


2.8.0 (2017-07-27)
------------------

- The upgrade step methods will remove and skip broken catalog brains. [jone]


2.7.2 (2017-07-13)
------------------
