@@ -1,3 +1,4 @@
+from ftw.upgrade.command import combine_bundles
 from ftw.upgrade.command import create
 from ftw.upgrade.command import help
 from ftw.upgrade.command import install
@@ -129,6 +130,7 @@ class UpgradeCommand(object):
         argcomplete.autocomplete(self.parser)
 
         commands = self.parser.add_subparsers(help='Command')
+        combine_bundles.setup_argparser(commands)
         create.setup_argparser(commands)
         install.setup_argparser(commands)
         list_cmd.setup_argparser(commands)
